# tracker-1

./: ChangeLog  Makefile.am  Makefile.decl  README  autogen.sh  configure.ac
data/: Makefile.am  org.freedesktop.TrackerIndexer.service.in  sqlite-cache.sql  sqlite-service.sql  sqlite-stored-procs.sql  sqlite-temp-tables.sql  sqlite-tracker.sql  sqlite-xesam.sql  tracker-dbus-daemon.xml  tracker-dbus-search.xml  tracker-dbus-tracker-files.xml  tracker-dbus-tracker-keywords.xml  tracker-dbus-tracker-metadata.xml  tracker-indexer.xml  tracker-sparql-qt.pc.in  tracker-xesam-search.xml
data/dbus/: Makefile.am  org.freedesktop.Tracker.Indexer.service.in  org.freedesktop.Tracker1.Miner.PicasaWeb.service.in  tracker-daemon.xml  tracker-files.xml  tracker-indexer.xml  tracker-keywords.xml  tracker-metadata.xml  tracker-resources.xml  tracker-search.xml  tracker-writeback.xml
data/miners/: Makefile.am  tracker-miner-picasaweb.desktop.in
data/modules/: Makefile.am  applications.xml  evolution.module  files.module  files.xml  gaim-conversations.xml
data/ontologies/: 11-rdf.ontology  30-nie.ontology  31-nao.ontology  32-nco.ontology  33-nfo.ontology  35-ncal.ontology  38-nmm.ontology  90-tracker.ontology  91-maemo.ontology  Makefile.am
data/services/: Makefile.am  audio.metadata  default.metadata  default.service  file.metadata  xesam-metadata.mmapping
examples/: Makefile.am
examples/libtracker-sparql-qt/: Makefile.am  tracker-sparql-qt.cpp
src/: Makefile.am
src/libinotify/: Makefile.am  inotify-handle.c  inotify-handle.h  inotify-log.h  inotify-monitor.c  inotify-monitor.h  linux-inotify-syscalls.h
src/libstemmer/: Makefile.am  api.c  libstemmer.c  libstemmer.h  modules.h  stem_UTF_8_danish.c  stem_UTF_8_dutch.c  stem_UTF_8_english.c  stem_UTF_8_finnish.c  stem_UTF_8_french.c  stem_UTF_8_german.c  stem_UTF_8_hungarian.c  stem_UTF_8_italian.c  stem_UTF_8_norwegian.c  stem_UTF_8_porter.c  stem_UTF_8_portuguese.c  stem_UTF_8_russian.c  stem_UTF_8_spanish.c  stem_UTF_8_swedish.c  utilities.c
src/libtracker/: Makefile.am  tracker-files.c  tracker-get-meta-for-folder.c  tracker-query.c  tracker-search.c  tracker-stats.c  tracker-status.c  tracker-tag.c  tracker-unique.c  tracker.c  tracker.h
src/libtracker-bus/: Makefile.am  tracker-bus-array-update.c  tracker-bus-fd-update.c  tracker-bus-shared.c  tracker-bus.vala
src/libtracker-client/: tracker.c
src/libtracker-common/: Makefile.am  tracker-albumart.c  tracker-config.c  tracker-config.h  tracker-configuration.c  tracker-configuration.h  tracker-dbus.c  tracker-dbus.h  tracker-field-data.c  tracker-field-data.h  tracker-field.c  tracker-field.h  tracker-file-utils.c  tracker-file-utils.h  tracker-hal.c  tracker-hal.h  tracker-index-item.c  tracker-index-item.h  tracker-ioprio.c  tracker-ioprio.h  tracker-language.c  tracker-language.h  tracker-log.c  tracker-log.h  tracker-module-config.c  tracker-module-config.h  tracker-nfs-lock.c  tracker-nfs-lock.h  tracker-ontology.c  tracker-ontology.h  tracker-os-dependant-unix.c  tracker-os-dependant-win.c  tracker-os-dependant.h  tracker-parser.c  tracker-parser.h  tracker-property.c  tracker-property.h  tracker-service.c  tracker-service.h  tracker-type-utils.c  (+7 more)
src/libtracker-data/: Makefile.am  libtracker-data.vapi  tracker-data-backup.c  tracker-data-manager.c  tracker-data-query.c  tracker-data-update.c  tracker-data-update.h  tracker-data.h  tracker-db-interface-sqlite.c  tracker-db-interface-sqlite.h  tracker-db-journal.c  tracker-db-journal.h  tracker-db-manager.c  tracker-db-manager.h  tracker-ontologies.c  tracker-ontologies.h  tracker-property.c  tracker-property.h  tracker-sparql-expression.vala  tracker-sparql-pattern.vala  tracker-sparql-query.vala  tracker-sparql-scanner.vala
src/libtracker-db/: Makefile.am  tracker-db-action.c  tracker-db-action.h  tracker-db-backup.c  tracker-db-backup.h  tracker-db-dbus.c  tracker-db-dbus.h  tracker-db-file-info.c  tracker-db-file-info.h  tracker-db-index-item.c  tracker-db-index-item.h  tracker-db-index-manager.c  tracker-db-index-manager.h  tracker-db-index.c  tracker-db-index.h  tracker-db-interface-sqlite.c  tracker-db-interface-sqlite.h  tracker-db-interface.c  tracker-db-interface.h  tracker-db-manager.c  tracker-db-manager.h
src/libtracker-direct/: Makefile.am  tracker-connection.vala  tracker-direct.vala
src/libtracker-extract/: Makefile-shared-sources.decl  Makefile.am  tracker-album-art-dummy.c  tracker-album-art-generic.h  tracker-album-art-pixbuf.c  tracker-album-art-quill.cpp  tracker-album-art.c  tracker-album-art.h  tracker-extract-sparql.c  tracker-extract-sparql.h  tracker-extract.h  tracker-marshal.list  tracker-storage.h  tracker-xmp.c  tracker-xmp.h
src/libtracker-fts/: tracker-fts.c  tracker-parser.c  tracker-parser.h
src/libtracker-gtk/: tracker-keyword-store.c  tracker-keyword-store.h  tracker-metadata-tile.c  tracker-metadata-tile.h  tracker-tag-bar.c  tracker-tag-bar.h  tracker-ui.h
src/libtracker-miner/: Makefile.am  tracker-albumart.c  tracker-albumart.h  tracker-dbus.c  tracker-miner-fs.c  tracker-miner-fs.h  tracker-miner-object.c  tracker-miner-web.c  tracker-miner.h  tracker-password-provider-keyfile.c  tracker-sparql-buffer.c
src/libtracker-socket-ipc/: Makefile.am  tracker-socket-ipc-test.c  tracker-socket-ipc.c  tracker-socket-ipc.h
src/libtracker-sparql/: Makefile.am  tracker-backend.vala  tracker-builder.vala  tracker-connection.vala  tracker-cursor.vala  tracker-plugin-loader.vala  tracker-sparql.vapi  tracker-uri.c  tracker-utils.vala
src/libtracker-sparql-qt/: Makefile.am  common.h  connection.cpp  connection.h  cursor.cpp  cursor.h  error.cpp  error.h  tracker-sparql-qt.h
src/miners/: Makefile.am
src/tracker-applet/: Makefile.am  tracker-applet-marshallers.c  tracker-applet-marshallers.h  tracker-applet.c  tracker-applet.h
src/tracker-control/: Makefile.am  tracker-control-general.c
src/tracker-extract/: Makefile.am  tracker-albumart.c  tracker-config.c  tracker-config.h  tracker-controller.c  tracker-extract-abw.c  tracker-extract-exif.c  (+25 more)
tests/: Makefile.am
(+350 files in other folders)
