SUBDIRS = dbus modules languages icons services

configdir = $(datadir)/tracker

config_DATA =						\
	sqlite-tracker.sql 				\
	sqlite-cache.sql 				\
	sqlite-contents.sql				\
	sqlite-email.sql				\
	sqlite-service-triggers.sql 			\
	sqlite-tracker-triggers.sql 			\
	sqlite-user-data.sql 				\
	sqlite-stored-procs.sql 			\
	sqlite-service.sql				\
	sqlite-service-types.sql 			\
	sqlite-metadata.sql 				\
	sqlite-xesam.sql

EXTRA_DIST = $(config_DATA)
