include $(top_srcdir)/Makefile.decl

SUBDIRS =                                              \
	libtracker-extract                             \
	libtracker-miner                               \
	rss-reader                                     \
	class-signal

if HAVE_LIBTRACKER_SPARQL_QT
SUBDIRS += libtracker-sparql-qt
endif
